fix on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ body {
 img {
     max-width: 100%;
     max-height: 100%;
-    height: 100%;
+    /* height: 100%; */
     /* width: 100%; */
 }
 a:focus, input:focus, textarea:focus, button:focus {
